Added Project Cards

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,6 @@ html, body {
 
 .sidebar {
     background-color: #0ea5e9;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     color: white;
     padding: 10px;
     grid-row: 1/5;
@@ -79,9 +78,8 @@ li:hover {
 }
 
 input {
-    width: 40vw;
     height: min-content;
-    width: 80%;
+    width: 110%;
     padding: 10px;
     border-radius: 25px;
     border: none;
@@ -96,7 +94,6 @@ input:focus {
 }
 
 .Topheader {
-    box-shadow: 0 4px 2px -2px rgb(206, 206, 206);
     display: grid;
     grid-template-rows: 1fr 2fr;
     grid-template-columns: min-content 1fr max-content max-content;
@@ -134,7 +131,6 @@ img {
 .profileBottom{
     height: 100px;
     width: 100px;
-    margin: 20px;
     margin-left: 30px;
 }
 
@@ -171,4 +167,35 @@ button:hover{
     display: flex;
     justify-self: flex-end;
     grid-column: 3/6;
+}
+
+.searchLogo{
+    justify-self: flex-end;
+}
+
+.mainContent{
+    display: grid;
+    grid-template-columns: 1.5fr 1fr;
+    grid-template-rows: min-content 1fr 1fr 1fr;
+    background-color: #e4e4e4;
+    box-sizing: border-box;
+    padding-left: 30px;
+}
+
+.projects{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-row: 2/5;
+    gap: 10px;
+}
+
+.card{
+    width: 20vw;
+    background-color: #ffffff;
+    border-radius: 8px;
+    
+}
+
+h2{
+    margin: 7px;
 }
