--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,13 @@ html, body {
     grid-row: 1/5;
 }
 
+.bottom{
+    position: fixed;
+    bottom: 15px;
+}
+
+
+
 .Title {
     display: flex;
     margin-bottom: 20px;
@@ -79,6 +86,8 @@ li > svg {
 
 .topList {
     margin-bottom: 4vh;
+    position: sticky;
+    top: 20px;
 }
 
 li:hover {
@@ -105,6 +114,7 @@ input:focus {
     background-color: white;
     display: grid;
     grid-template-rows: 1fr 2fr;
+    box-shadow: 0 4px 2px -2px rgb(39, 39, 39);
     grid-template-columns: min-content 1fr max-content max-content;
     grid-column-start: 2;
 }
@@ -220,7 +230,7 @@ button:hover {
 h2 {
     margin: 7px;
     margin-bottom: 5px;
-    margin-top: 5px;
+    margin-top: 20px;
 }
 
 .cardBtns {
@@ -299,4 +309,8 @@ h2 {
 
 .trendingCard p {
     color: #707070;
+}
+
+svg:hover{
+    scale: 1.05;
 }
