--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ html, body {
 
 .bottom{
     position: fixed;
-    bottom: 15px;
+    bottom: 15px; 
 }
 
 
@@ -211,12 +211,15 @@ button:hover {
 .card {
     display: grid;
     grid-template-rows: 1fr 3fr 1fr;
-    width: 25vw;
-    height: 25vh;
+    width: 100%; 
+    max-width: 25vw; 
+    height: auto; 
+    min-height: 25vh; 
     border-left: 10px solid #0ea5e9;
     background-color: #ffffff;
     border-radius: 8px;
 }
+
 
 .card>p, .card>h3 {
     margin: 10px;
@@ -299,7 +302,7 @@ h2 {
     grid-column: 2/3;
     grid-template-rows:1fr 1fr 1fr 1fr;
     grid-template-columns: 1fr 2fr;
-    width: 45%;
+    width: max-content;
     height: 90%;
     background-color: #ffffff;
     border-radius: 8px;
